# haskell-example

./: README.md  cabal.project
hello-world/: LICENSE  README.md  hello-world.cabal
json-parser/: .gitignore  CHANGELOG.md  README.md  scratchaskell-json.cabal
json-parser/app/: JsonVal.hs  Main.hs
map-example/: CHANGELOG.md  map-example.cabal
map-example/src/: MyLib.hs
solo-example/: CHANGELOG.md  solo-example.cabal
solo-example/app/: Main.hs
ts-types/: CHANGELOG.md  ts-types.cabal
ts-types/app/: Main.hs
