cabal-version:   3.16
name:            hello-world
version:         0.1.0.0
synopsis:        A simple Hello World program
license:         MIT
license-file:    LICENSE
author:          copilot-swe-agent[bot]
maintainer:      198982749+Copilot@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hello-world
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
